implementing basic crud for user domain
